--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -65,5 +65,5 @@ jobs:
         run: |
           for tag in ${IMAGE_TAG} ${IMAGE_TAG}-amd64 ${IMAGE_TAG}-arm; do \
           echo $goarch; \
-          docker push ${{ github_registry }}:${tag};\
+          docker push ${{ github.repository }}:${tag};\
           done
