:bug: fix docker.yml

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,8 +8,6 @@ jobs:
   github:
     name: GitHub Package Registry
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: line-googlehome-bot
     steps:
       - uses: actions/checkout@master
 
@@ -25,20 +23,19 @@ jobs:
       - name: Build image
         run: |
           for goarch in amd64 arm; do \
-          docker build -t docker.pkg.github.com/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG}-${goarch} --file Dockerfile .; \
+          docker build -t docker.pkg.github.com/${{ github.repository }}:${IMAGE_TAG}-${goarch} --file Dockerfile .; \
           done
 
       - name: Push image to GitHub Registry
         run: |
-          for goarch in amd64 arm; do \
-          docker push docker.pkg.github.com/${{ github.repository }}/${IMAGE_NAME}:${IMAGE_TAG}: \
+          for tag in ${IMAGE_TAG} ${IMAGE_TAG}-amd64 ${IMAGE_TAG}-arm; do \
+          echo $goarch; \
+          docker push docker.pkg.github.com/${{ github.repository }}:${tag};\
           done
 
   dockerhub:
     name: DockerHub
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: line-googlehome-bot
     steps:
       - uses: actions/checkout@master
 
