:bug: fix docker.yml

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,8 @@ jobs:
           for goarch in amd64 arm; do \
           docker build -t docker.pkg.github.com/${{ github.repository }}:${IMAGE_TAG}-${goarch} --file Dockerfile .; \
           done
+          # ${IMAGE_TAG}-amd64 -> ${IMAGE_TAG}
+          docker tag docker.pkg.github.com/${{ github.repository }}:${IMAGE_TAG}-amd64 docker.pkg.github.com/${{ github.repository }}:${IMAGE_TAG}
 
       - name: Push image to GitHub Registry
         run: |
