--- a/helm/line-googlehome-bot/templates/ngrok.yaml
+++ b/helm/line-googlehome-bot/templates/ngrok.yaml
@@ -22,7 +22,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ .Release.Name }}-secret
-                  key: ngrok_auth_key
+                  key: ngrokAuthKey
             - name: NGROK_REGION
               value: ap
             - name: NGROK_PORT
