--- a/helm/line-googlehome-bot/templates/deployment.yaml
+++ b/helm/line-googlehome-bot/templates/deployment.yaml
@@ -24,6 +24,8 @@ spec:
           value: {{ .Values.app.googlehomeIp }}
         - name: VOLUME
           value: {{ .Values.app.volume | quote }}
+        - name: VOLUME_RESTORE_TIME
+          value: {{ .Values.app.volumeRestoreTime | quote }}
         - name: CHANNEL_SECRET
           valueFrom:
             secretKeyRef:
