--- a/helm/line-googlehome-bot/values.yaml
+++ b/helm/line-googlehome-bot/values.yaml
@@ -1,10 +1,11 @@
 replicaCount: 2
 
 image:
-  tag: 1.1.0
+  tag: 1.2.0
 
 app:
   port: 8080
   googlehomeIp: 172.22.1.31
   volume: 0.5
+  volumeRestoreTime: 10
   s3Bucket: line-googlehome-bot
